--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,56 @@
     <artifactId>my-java-program</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!-- <properties>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
+    </properties> -->
+
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.12.1</version>
+        <configuration>
+            <release>22</release>
+        </configuration>
+    </plugin>
+
     <dependencies>
-        <!-- Dependency on Apache Commons Lang -->
+        <!-- JUnit Dependency -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Test Dependency on Apache Commons Lang -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <!-- <outputDirectory>${project.build.directory}/surefire-reports</outputDirectory>
+                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory> -->
+                    <reportFormat>xml</reportFormat>
+                    <!-- Output to the console -->
+                    <useFile>false</useFile>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
