--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,19 @@
       <version>5.10.2</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>5.10.2</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- JUnit Jupiter Parameterized Testing support -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.8.1</version> <!-- Update to the latest version -->
       <scope>test</scope>
     </dependency>
 
