--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <!-- <allure.version>2.14.0</allure.version> -->
   </properties>
 
   <dependencies>
@@ -45,18 +46,19 @@
         <scope>test</scope>
     </dependency>
 
-    <!-- <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency> -->
-
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
       <version>2.9.2</version>
     </dependency>
+
+    <!-- Allure JUnit 5 integration -->
+    <!-- <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-junit5</artifactId>
+      <version>${allure.version}</version>
+    </dependency> -->
+
   </dependencies>
 
   <build>
@@ -70,6 +72,7 @@
             </consoleOutputReporter>
          </configuration>
       </plugin> -->
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
